// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extensions.tx (provider=cockroachdb) extended client in tx can rollback via custom call 1`] = `
"
Invalid \`prisma.user.create()\` invocation:


Unique constraint failed on the fields: (\`email\`)"
`;

exports[`extensions.tx (provider=cockroachdb) extended client in tx can rollback via normal call 1`] = `
"
Invalid \`xprisma.user.create()\` invocation in
/client/tests/functional/extensions/tx.ts:0:0

  XX     lastName: 'Smith',
  XX   },
  XX }),
→ XX xprisma.user.create(
Unique constraint failed on the fields: (\`email\`)"
`;

exports[`extensions.tx (provider=cockroachdb, js_pg_cockroachdb) extended client in tx can rollback via custom call 1`] = `
"
Invalid \`prisma.user.create()\` invocation:


Unique constraint failed on the fields: (\`email\`)"
`;

exports[`extensions.tx (provider=cockroachdb, js_pg_cockroachdb) extended client in tx can rollback via normal call 1`] = `
"
Invalid \`xprisma.user.create()\` invocation in
/client/tests/functional/extensions/tx.ts:0:0

  XX     lastName: 'Smith',
  XX   },
  XX }),
→ XX xprisma.user.create(
Unique constraint failed on the fields: (\`email\`)"
`;

exports[`extensions.tx (provider=mongodb) extended client in tx can rollback via custom call 1`] = `
"
Invalid \`prisma.user.create()\` invocation:


Unique constraint failed on the constraint: \`User_email_key\`"
`;

exports[`extensions.tx (provider=mongodb) extended client in tx can rollback via normal call 1`] = `
"
Invalid \`xprisma.user.create()\` invocation in
/client/tests/functional/extensions/tx.ts:0:0

  XX     lastName: 'Smith',
  XX   },
  XX }),
→ XX xprisma.user.create(
Unique constraint failed on the constraint: \`User_email_key\`"
`;

exports[`extensions.tx (provider=mysql) extended client in tx can rollback via custom call 1`] = `
"
Invalid \`prisma.user.create()\` invocation:


Unique constraint failed on the constraint: \`User_email_key\`"
`;

exports[`extensions.tx (provider=mysql) extended client in tx can rollback via normal call 1`] = `
"
Invalid \`xprisma.user.create()\` invocation in
/client/tests/functional/extensions/tx.ts:0:0

  XX     lastName: 'Smith',
  XX   },
  XX }),
→ XX xprisma.user.create(
Unique constraint failed on the constraint: \`User_email_key\`"
`;

exports[`extensions.tx (provider=mysql, js_mariadb) extended client in tx can rollback via custom call 1`] = `
"
Invalid \`prisma.user.create()\` invocation:


Unique constraint failed on the constraint: \`User_email_key\`"
`;

exports[`extensions.tx (provider=mysql, js_mariadb) extended client in tx can rollback via normal call 1`] = `
"
Invalid \`xprisma.user.create()\` invocation in
/client/tests/functional/extensions/tx.ts:0:0

  XX     lastName: 'Smith',
  XX   },
  XX }),
→ XX xprisma.user.create(
Unique constraint failed on the constraint: \`User_email_key\`"
`;

exports[`extensions.tx (provider=mysql, js_planetscale) extended client in tx can rollback via custom call 1`] = `
"
Invalid \`prisma.user.create()\` invocation:


Unique constraint failed on the constraint: \`User_email_key\`"
`;

exports[`extensions.tx (provider=mysql, js_planetscale) extended client in tx can rollback via normal call 1`] = `
"
Invalid \`xprisma.user.create()\` invocation in
/client/tests/functional/extensions/tx.ts:0:0

  XX     lastName: 'Smith',
  XX   },
  XX }),
→ XX xprisma.user.create(
Unique constraint failed on the constraint: \`User_email_key\`"
`;

exports[`extensions.tx (provider=mysql, qpe=remote) extended client in tx can rollback via custom call 1`] = `
"
Invalid \`prisma.user.create()\` invocation:


Unique constraint failed on the constraint: \`User_email_key\`"
`;

exports[`extensions.tx (provider=mysql, qpe=remote) extended client in tx can rollback via normal call 1`] = `
"
Invalid \`xprisma.user.create()\` invocation in
/client/tests/functional/extensions/tx.ts:0:0

  XX     lastName: 'Smith',
  XX   },
  XX }),
→ XX xprisma.user.create(
Unique constraint failed on the constraint: \`User_email_key\`"
`;

exports[`extensions.tx (provider=postgresql) extended client in tx can rollback via custom call 1`] = `
"
Invalid \`prisma.user.create()\` invocation:


Unique constraint failed on the fields: (\`email\`)"
`;

exports[`extensions.tx (provider=postgresql) extended client in tx can rollback via normal call 1`] = `
"
Invalid \`xprisma.user.create()\` invocation in
/client/tests/functional/extensions/tx.ts:0:0

  XX     lastName: 'Smith',
  XX   },
  XX }),
→ XX xprisma.user.create(
Unique constraint failed on the fields: (\`email\`)"
`;

exports[`extensions.tx (provider=postgresql, js_neon) extended client in tx can rollback via custom call 1`] = `
"
Invalid \`prisma.user.create()\` invocation:


Unique constraint failed on the fields: (\`email\`)"
`;

exports[`extensions.tx (provider=postgresql, js_neon) extended client in tx can rollback via normal call 1`] = `
"
Invalid \`xprisma.user.create()\` invocation in
/client/tests/functional/extensions/tx.ts:0:0

  XX     lastName: 'Smith',
  XX   },
  XX }),
→ XX xprisma.user.create(
Unique constraint failed on the fields: (\`email\`)"
`;

exports[`extensions.tx (provider=postgresql, js_pg) extended client in tx can rollback via custom call 1`] = `
"
Invalid \`prisma.user.create()\` invocation:


Unique constraint failed on the fields: (\`email\`)"
`;

exports[`extensions.tx (provider=postgresql, js_pg) extended client in tx can rollback via normal call 1`] = `
"
Invalid \`xprisma.user.create()\` invocation in
/client/tests/functional/extensions/tx.ts:0:0

  XX     lastName: 'Smith',
  XX   },
  XX }),
→ XX xprisma.user.create(
Unique constraint failed on the fields: (\`email\`)"
`;

exports[`extensions.tx (provider=postgresql, qpe=remote) extended client in tx can rollback via custom call 1`] = `
"
Invalid \`prisma.user.create()\` invocation:


Unique constraint failed on the fields: (\`email\`)"
`;

exports[`extensions.tx (provider=postgresql, qpe=remote) extended client in tx can rollback via normal call 1`] = `
"
Invalid \`xprisma.user.create()\` invocation in
/client/tests/functional/extensions/tx.ts:0:0

  XX     lastName: 'Smith',
  XX   },
  XX }),
→ XX xprisma.user.create(
Unique constraint failed on the fields: (\`email\`)"
`;

exports[`extensions.tx (provider=sqlite) extended client in tx can rollback via custom call 1`] = `
"
Invalid \`prisma.user.create()\` invocation:


Unique constraint failed on the fields: (\`email\`)"
`;

exports[`extensions.tx (provider=sqlite) extended client in tx can rollback via normal call 1`] = `
"
Invalid \`xprisma.user.create()\` invocation in
/client/tests/functional/extensions/tx.ts:0:0

  XX     lastName: 'Smith',
  XX   },
  XX }),
→ XX xprisma.user.create(
Unique constraint failed on the fields: (\`email\`)"
`;

exports[`extensions.tx (provider=sqlite, js_better_sqlite3) extended client in tx can rollback via custom call 1`] = `
"
Invalid \`prisma.user.create()\` invocation:


Unique constraint failed on the fields: (\`email\`)"
`;

exports[`extensions.tx (provider=sqlite, js_better_sqlite3) extended client in tx can rollback via normal call 1`] = `
"
Invalid \`xprisma.user.create()\` invocation in
/client/tests/functional/extensions/tx.ts:0:0

  XX     lastName: 'Smith',
  XX   },
  XX }),
→ XX xprisma.user.create(
Unique constraint failed on the fields: (\`email\`)"
`;

exports[`extensions.tx (provider=sqlite, js_libsql) extended client in tx can rollback via custom call 1`] = `
"
Invalid \`prisma.user.create()\` invocation:


Unique constraint failed on the fields: (\`email\`)"
`;

exports[`extensions.tx (provider=sqlite, js_libsql) extended client in tx can rollback via normal call 1`] = `
"
Invalid \`xprisma.user.create()\` invocation in
/client/tests/functional/extensions/tx.ts:0:0

  XX     lastName: 'Smith',
  XX   },
  XX }),
→ XX xprisma.user.create(
Unique constraint failed on the fields: (\`email\`)"
`;

exports[`extensions.tx (provider=sqlserver) extended client in tx can rollback via custom call 1`] = `
"
Invalid \`prisma.user.create()\` invocation:


Unique constraint failed on the constraint: \`dbo.User\`"
`;

exports[`extensions.tx (provider=sqlserver) extended client in tx can rollback via normal call 1`] = `
"
Invalid \`xprisma.user.create()\` invocation in
/client/tests/functional/extensions/tx.ts:0:0

  XX     lastName: 'Smith',
  XX   },
  XX }),
→ XX xprisma.user.create(
Unique constraint failed on the constraint: \`dbo.User\`"
`;

exports[`extensions.tx (provider=sqlserver, js_mssql) extended client in tx can rollback via custom call 1`] = `
"
Invalid \`prisma.user.create()\` invocation:


Unique constraint failed on the constraint: \`dbo.User\`"
`;

exports[`extensions.tx (provider=sqlserver, js_mssql) extended client in tx can rollback via normal call 1`] = `
"
Invalid \`xprisma.user.create()\` invocation in
/client/tests/functional/extensions/tx.ts:0:0

  XX     lastName: 'Smith',
  XX   },
  XX }),
→ XX xprisma.user.create(
Unique constraint failed on the constraint: \`dbo.User\`"
`;
